fix: bump dark mode mid-gray to meet WCAG AA contrast

--- a/assets/css/misc/dark.css
+++ b/assets/css/misc/dark.css
@@ -8,8 +8,8 @@
     --light-gray-color: #1e1e2e;
     --color-light-gray: #1e1e2e;
     --color-light-color: #1e1e2e;
-    --mid-gray-color: #6b6b80;
-    --color-mid-gray: #6b6b80;
+    --mid-gray-color: #8a8a9e;
+    --color-mid-gray: #8a8a9e;
     --dark-gray-color: #a0a0b5;
     --color-dark-gray: #a0a0b5;
     --darker-gray-color: #f0f0f5;
@@ -97,8 +97,8 @@
         --color-lighter-gray: #1a1a28;
         --light-gray-color: #1e1e2e;
         --color-light-gray: #1e1e2e;
-        --mid-gray-color: #6b6b80;
-        --color-mid-gray: #6b6b80;
+        --mid-gray-color: #8a8a9e;
+        --color-mid-gray: #8a8a9e;
         --dark-gray-color: #a0a0b5;
         --color-dark-gray: #a0a0b5;
         --darker-gray-color: #f0f0f5;
